# ChiisanaURL

./: Cargo.toml  README.md  application.properties
.github/workflows/: main.yml  release.yml  rust.yml
front/: index.htm
src/: bodies.rs  get_actions.rs  lib.rs  main.rs  param_reader.rs  post_actions.rs  properties_reader.rs  redis_handler.rs  requests.rs  response.rs  server.rs  socket_factory.rs  url_maker.rs
tests/: integration_test.rs  param_reader_test.rs  properties_reader_test.rs  server_test.rs  socket_factory_test.rs  url_maker_test.rs
