[package]
name = "chiisana_url"
version = "0.0.1"
authors = ["Alvaro <alvaromello@PREFEITURA.SP.GOV.BR>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/alvarowm/ChiisanaURL"
description = "Um encurtador de URL leve, simples e feito em RUST com suporte a senhas e URLs customizadas."
license = "MIT"
[dependencies]
rand = "0.8.5"
java-properties = "2.0.0"
warp = "0.3.5"
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_derive = "1.0.186"
serde_json = "1.0.105"
redis = "0.23.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json"] }
